# voss-mobility-dispatch-agent

./: .gitignore  README.md  clean_data.py  database.py  db_models.py  env.example  evaluate_model.py  generate_data.py  pyproject.toml  requirements.txt  run_service.py  test_system.py  train_model.py
agents/: dispatch_crew.py
api/: main.py
data/: X_test.csv  X_train.csv  ride_demand.csv  ride_demand_cleaned.csv  y_test.csv  y_train.csv
docs/: TESTING.md  research.md
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
models/: demand_model.pkl  dispatch_plan.txt  evaluation_report.txt
